--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,110 @@
 * {
   margin: 0px;
   padding: 0px;
+  /* botoes */
+  font-family: 'Liu Jian Mao Cao', cursive;   
+  /* font-family: 'Muli', sans-serif; */
+  /* font-family: 'Inconsolata', monospace; */
+  /* font-family: 'Oxygen', sans-serif; */
+  /* body-cards-t[itulo h4] */
+  /* font-family: 'Karla', sans-serif;  */
+  /* (inputs) */
+  /* font-family: 'Josefin Sans', sans-serif;  */
 }
-
 html {
   font-size: 62.5%;
   color: white;
   box-sizing: border-box;
 }
-
 body {
   overflow-x: hidden;
 }
-
 a {
   text-decoration: none;
 }
-
-h5 {
+h4 {
+  font-size: 1.25rem;
   color: black;
 }
-
 label {
   color: black;
 }
-
 p {
   color: black;
+}
+
+
+/* BOTOES */
+/* classe btn é a geral] */
+.btn {
+  display: inline-block;
+  font-weight: 400;
+  color: #212529;
+  text-align: center;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+@media (prefers-reduced-motion: reduce) {
+  .btn {
+    transition: none;
+  }
+}
+.btn:hover {
+  color: #212529;
+  text-decoration: none;
+}
+.btn:focus,
+.btn.focus {
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+.btn.disabled,
+.btn:disabled {
+  opacity: 0.65;
+}
+/* btn-secondary é o default com cores perto da nossa */
+.btn-secondary {
+  font-weight: 500;
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+.btn-secondary:hover {
+  color: #fff;
+  background-color: #5a6268;
+  border-color: #545b62;
+}
+.btn-secondary:focus,
+.btn-secondary.focus {
+  box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
+}
+.btn-secondary.disabled,
+.btn-secondary:disabled {
+  color: #fff;
+  background-color: #6c757d;
+  border-color: #6c757d;
+}
+.btn-secondary:not(:disabled):not(.disabled):active,
+.btn-secondary:not(:disabled):not(.disabled).active,
+.show>.btn-secondary.dropdown-toggle {
+  color: #fff;
+  background-color: #545b62;
+  border-color: #4e555b;
+}
+.btn-secondary:not(:disabled):not(.disabled):active:focus,
+.btn-secondary:not(:disabled):not(.disabled).active:focus,
+.show>.btn-secondary.dropdown-toggle:focus {
+  box-shadow: 0 0 0 0.2rem rgba(130, 138, 145, 0.5);
 }
 
 /* Topo Nav */
@@ -35,112 +113,106 @@ p {
   justify-content: space-between;
   height: 4rem;
   align-items: center;
-  background: #F2F0F2;
+  background: black;
   position: fixed;
   top: 0px;
   width: 100vw;
   padding: 10px;
   z-index: 1;
 }
-
 .search {
   display: flex;
   background: #fff;
   border: none;
-  width: 90%;
+  width: 70%;
   height: 90%;
   border-radius: 9px;
   margin-right: 30px;
   align-items: center;
 }
+.iconsHome {
+  width: 60px;
+  height: 60px;
+}
+.navImageHome {
+  width: 100%;
+  height: 100%;
+}
 
-.search>input {
+.search > a {
+  width: 100%;
+}
+
+.search > a > input {
   border: none;
   width: 100%;
-  padding: 2px;
-  font-size: 1rem;
+  font-size: 1.4rem;
   letter-spacing: 17px;
   font-family: cursive;
 }
-
 .search>label>img {
   height: 2.5rem;
   width: 2.5rem;
   padding: 10px;
 }
-
 .logo {
   margin: 4px 7px 4px 2px;
   width: 5rem;
   height: 4rem;
 }
-
 .logo>a>img {
   margin-top: 3px;
   width: 90%;
   height: 90%;
 }
-
 .div-icons {
   display: flex;
 }
-
 .icons {
   width: 4rem;
   height: 4rem;
   margin-right: 30px;
 }
-
 .icons>a>img {
   margin-top: 5px;
-  width: 85%;
-  height: 85%;
+  width: 80%;
+  height: 80%;
 }
-
 /* MAIN */
 .allVideos {
   background-color: white;
   height: 100vh;
 }
-
 .box-videos {
   background-color: black;
   height: 20rem;
 }
-
 .box-videos>* {
   margin: 25px;
 }
-
 .allVideos>* {
   padding: 5.5rem 8rem 1.5rem 3rem;
 }
-
 .img-boxes {
   width: 100%;
   height: 70%;
 }
-
 .img-boxes>img {
   width: 100%;
   height: 100%;
 }
-
 .box-info {
   display: flex;
 }
-
 .img-user {
-  width: 80%;
-  height: 80%;
+  width: 50px;
+  height: 50px;
 }
-
 .img-user>img {
   margin-left: 10%;
-  height: 50%;
-  width: 50%;
+  height: 50ṕx;
+  width: 50px;
 }
-
 /* FOOTER */
 footer {
   background-color: black;
@@ -149,91 +221,224 @@ footer {
   justify-content: space-evenly;
   position: fixed;
   bottom: 0px;
-  background: #F2F0F2;
   width: 100vw;
   z-index: 1;
   align-items: center;
 }
-
 .icon-footer {
   width: 25%;
-  margin: 0px 10px;
+  margin-left: 5px;
+  margin-bottom: 5px;
 }
-
 .figure-icon-footer {
-  width: 3rem;
-  height: 3em;
+  width: 3.2rem;
+  height: 3.2em;
 }
-
 .figure-icon-footer>* {
   width: 100%;
   height: 100%;
   margin-left: 50%;
 }
-
 /* CARD VIDEO */
 .img-you {
   width: 100vw;
   height: 70%;
 }
-
 .css-card-body {
   padding: 2.2rem 0 2.2rem 0;
   display: flex;
   align-items: center;
   height: 40%;
 }
-
 .css-card-body>div>h5 {
   width: 95%;
 }
-
 .css-card-body>div>p {
   width: 95%;
 }
-
 .css-container {
   margin-top: 20px;
 }
-
 /* FORM FILTER */
 .Union {
   /* height: 100rem; */
   height: 100vh;
-}  /* main */
-
+}
+/* main */
 .div-you {
   height: 33%;
 }
-
 .formFilter {
-  width: 85%;
+  width: 90%;
   margin-left: 20px;
+  height: 65%;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+  margin-top: -30px;
 }
-
 .formFilter>textarea {
   display: flex;
-  margin-top: 20px;
+  margin-top: 0px;
   flex-direction: column;
   resize: none;
   border-radius: 7px;
   height: 48px;
   overflow: hidden;
-  width: 80%
+  width: 93%;
+  border: 2px solid rgba(0,0,0,0.4);
 }
-
+.formFilter>label {
+  margin-top: 20px;
+}
 .form-control {
-  width: 55%;
+    background-color: white;
+    width: 80%;
+    margin-left: 22px;
+    padding: 7px;
+    border-color: black;
+    box-shadow: -5px 5px 4px;
+    border-radius: 30px;
 }
-
 .buttonForm {
-  width: 80%;
+  width: 100%;
   margin-left: 20px;
 }
 
 .div-you>a {
-  width: 25%;
-  height: 125%;
+  width: 330px;
+  height: 100px;
+}
+
+/* FORM LOGIN */
+.section-form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.background-image {
+  background: url(/images/Street-Night-City.jpg);
+  background-size: cover;
+  opacity: 0.8;
+  z-index: -1;
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.container-form {
+  display: flex;
+  flex-flow: column wrap;
+  height: 80%;
+  width: 80%;
+  justify-content: center;
+  align-content: center;
+  font-size: 2rem;
+  font-weight: bold;
+  background-color: rgba(203,240,440,0.2);
+}
+
+.container-form > form {
+  height: 50%;
+  width: 50%;
+}
+
+.container > form > label {
+  width: 100vw;
+}
+
+.container-form > form > input {
+  background: rgba(255,255,255,0.6);
+  height: 50px;
+  color: black;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.container-form > form > button {
+  margin-top: 20px;
+  height: 50%;
+  text-shadow: 0px 2px 2px white;
+}
+
+.container-form > p {
+  font-size: 1.4rem;
+  align-self: flex-end;
+  color: orange;
+  border: 2px solid orange;
+  box-shadow: 3px 3px 10px white;
+  margin-top: 44px;
+  padding: 11px;
+  text-shadow: 0 9px 12px rgba(0, 0, 0, 1);
+}
+
+.container-form > p > a {
+  color: white;
+}
+
+.container-form > * {
+  display: flex;
+  flex-direction: column;
+}
+
+/* USER INFO */
+
+.container-form-user {
+  display: flex;
+  flex-flow: column wrap;
+  height: 80%;
+  width: 100%;
+  margin-top: 20rem;
+  align-content: center;
+  border-top: 10px solid black;
+  border-width: 9px;
+  border-radius: 305px;
+}
+
+.container-form-user > form {
+  display: flex;
+  flex-flow: column wrap;
+  /* border: 15px solid aliceblue; */
+  padding: 32px;  
+}
+
+
+.container-form-user > form > input {
+  width: 120px;
+  border: 2px solid rgba(0,0,0,0.3);
+}
+
+.input-label-user-profile > label {
+  color: black;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  font-size: 1.3rem;
+  font-family: 'Karla', sans-serif;
+  text-shadow: 1px 0px 1px black;
+  letter-spacing: 2px;
+}
+
+.input-label-user-profile > select {
+  border: 0px;
+  width: 100%;
+  height: 43%;
+}
+
+.user-info-img {
+  position: absolute;
+  top: 0;
+  margin-top: 2rem;
+  height: 80px;
+  width: 80px;
+  margin-bottom: 60px;
+  border-radius: 50px;
+  border: solid 5px black;
 }
 
 /* VIDEO videosCards */
@@ -241,70 +446,72 @@ footer {
   width: 100vw;
   height: 100vh;
 }
-
 .youPlayerDiv {
   margin-top: 50px;
 }
-
 /* media == md == 768 desktop*/
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   html {
     font-size: 90%;
   }
-
   .navBar {
-    height: 2.5rem;
+    background: rgb(0,0,0);
+    height: 1.1rem;
+    padding: 15px;
   }
-
   .search {
     display: none;
   }
-
   .logo {
-    margin: 4px 7px 4px 14px;
-
+    width: 49px;
+    margin: 0px 6px 4px 24px;
+    height: 38px;
+    border: 3px solid black;
+    border-radius: 50%;
+    border-style: dotted;
   }
-
+  .logo > a > img {
+    margin-top: 6px;
+    width: 80%;
+    height: 80%;
+    padding: 0px;
+    margin-left: 6px;
+  }
   footer {
     display: none;
   }
-
   .css-card-body {
     padding: 0px;
   }
-
   .formAside {
-    background: #F5F6F6;
+    background: rgb(229,229,229);
     position: fixed;
     height: 100vh;
-    width: 20%;
+    width: 18 %;
     float: left;
     display: flex;
     flex-flow: column;
     justify-content: space-evenly;
   }
-
   .top-filter {
     display: flex;
     margin-top: 30px;
-  } /* filter,  */
-
+  }
+  /* filter,  */
   .clearbox {
     clear: both;
     height: 0;
     width: 0;
-  } /*  main */
-
+  }
+  /*  main */
   .css-card-body {
     align-items: end;
   }
-
   .css-card-body>* {
     margin-top: 20px;
   }
-
   .css-container {
-    height: inherit;
+    /* height: inherit; */
     position: relative;
     float: right;
     display: flex;
@@ -313,51 +520,250 @@ footer {
     margin-top: 6rem;
     /* background: red; */
   }
-
   .img-user {
     display: none;
-  }  /* videosCards */
-
+  }
+  /* videosCards */
   .div-you {
     display: flex;
     margin-left: 20px;
     /* border: 2px black solid;
     padding: 10px 0px 0px 30px;
     border-radius: 160px; */
+    margin-bottom: 10px;
+    padding-left: 20px;
+    border-left: 3px cadetblue solid;
   }
-
   .img-you {
-    width: 80%;
+    width: 180px;
     margin-right: 40px;
+    height: 96px;
   }
-
   .linkVideoPlayer {
     align-self: center;
-  } /* VideoCards, CardVideo */
-
+  }
+  .div-you>a {
+    width: inherit;
+    height: 100px;
+  }
+  /* VideoCards, CardVideo */
   #filter {
     height: 2.5rem;
     width: 2.5rem;
     margin: 0px 20px;
   }
+  /* USER-INFO */
+  .container-form-user > form > *{
+    margin-top: 20px;
+  }
+  .input-label-user-profile > select {
+    height: 28px;
+  }
 }
+ .info-user-write {
+  position: absolute;
+  left: 240px;
+  width: 100%;
+  bottom: 48%;
+  transform: translate(4%, -50%);
+  height: 29%;
+  font-style: italic;
+ }
 
+ .info-user-write > h3{
+  color:black;
+  font-size: 1.5rem;
+  position: relative;
+  left: 72px;
+  margin-bottom: 17px;
+  font-style: italic;
+ }
+ .info-user-write > p{
+   color: black;
+   position: relative;
+   left: 100px;
+   font-size: 1.04rem;
+   font-style: italic;
+ }
 /* media == md == 768 mobile*/
-@media (max-width: 768px) {
+@media (max-width: 769px) {
   .div-icons {
     display: none;
   }
-
   .css-container {
     padding-top: 60px;
     padding-bottom: 50px;
-  }  /* video card cardDiv */
-
+  }
+  /* video card cardDiv */
   .formAside {
     display: none;
-  }  /* filter */
-
+  }
+  /* filter */
   .youPlayerDiv {
     margin-bottom: 30px;
-  }/* VideoPlayer */
+  }
+  /* VideoPlayer */
+
+  /* USER-PROFILE */ 
+  .container-form-user > form {
+    margin-top: 9rem;
+    display: grid;
+    grid-template-columns: 12.2rem 11.4rem;
+    /* height: 50%; */
+    grid-auto-rows: 6.5rem;
+    grid-column-gap: 4.3rem;
+  }
+
+  .container-form > form > select {
+    border: none;
+    height: 74%;
+  }
+  
+  .input-label-user-profile > input {
+    width: 100%;
+    height: 2.5rem;
+    text-align: center;
+    border: 2px solid rgba(0,0,0,0.3);
+  }
+
+  .input-label-user-profile > label {
+    color: black;
+    margin-right: 10px;
+    margin-bottom: 10px;
+    font-size: 1.7rem;
+  }
+
+  .container-form > form > label {
+    width: 100vw;
+    position: relative;
+    right: 30%;
+    margin: 5px 0px 8px 0px;
+  }
+
+  .div-button-user-edits {
+    display: flex;
+    justify-content: space-between;
+    position: fixed;
+    bottom: 0;
+    margin-bottom: 5rem;
+    left: 0;
+    width: 100%;
+  }
+
+  .div-button-user-edits > button {
+    margin-bottom: -6px;
+    margin-bottom: -6px;
+    height: 5rem;
+    width: 9rem;
+    font-size: 1.3rem;
+  }
+
+  .info-user-write {
+    left: 20%;
+    transform: translate(-15%, -44%);
+  }
+
+  /* Container Login */
+  .container-form > form > input {
+    height: 30px;
+    border: 10px solid transparent;
+    border-radius: 11px;
+  }
+
+  /* FORM MOBILE DOM */
+  #searchDom {
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    background: rgba(20,30,50,0.8);
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+
+  .section-form-dom-mobile {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+  }
+  
+  .input-dom {
+    border: solid 4px gainsboro;
+    padding: 5px;
+    height: 47px;
+    width: 80%;
+    margin-bottom: 16px;
+    letter-spacing: 1px;
+    box-shadow: 1px 2px 15px black;
+    border-radius: 10px;
+  }
+
+  .button-dom-submit {
+    height: 200%;
+    width: 50%;
+    font-size: 1.7rem;
+    text-shadow: 1px 0px 0px white;
+  }
+
+  .button-dom-exit {
+    height: 200%;
+    width: 50%;
+    font-size: 1.7rem;
+    text-shadow: 1px 0px 0px white;
+  }
+
+  .div-button-dom {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-top: 40px;
+  }
 }
+
+/* Media tablet */
+/* @media (min-width: 897px ) {
+  .btn-search {
+    width: 100%;
+  }
+  .btn-erase {
+    width: 100%;
+  }
+  .buttonForm {
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    flex-flow: column wrap;
+    margin: 0;
+  }
+} */
+
+
+/* OVERRIDE */
+.btn-erase {
+  background-color: black;
+  color: white;
+  border-color: black;
+}
+
+.btn-erase:hover {
+  background-color: white;
+  color: black;
+}
+
+.btn-search:hover {
+  background-color: white;
+  color: black;
+}
+
+html::-webkit-scrollbar {
+	width: 0px
+}
+
+html::-webkit-scrollbar-track-piece {
+	background-color: transparent;
+	/* -webkit-border-radius: 6px */
+} 
